# validate-xml-rust

./: .travis.yml  CHANGELOG.md  CLAUDE.md  Cargo.toml  GEMINI.md  LICENSE  README.md  deny.toml
.github/: dependabot.yml
.github/workflows/: ci.yml
benches/: xml_benchmark.rs
docs/: USER_GUIDE.md
samples/: pom.xml
src/: cache.rs  cli.rs  config.rs  error.rs  error_reporter.rs  file_discovery.rs  http_client.rs  lib.rs  libxml2.rs  main.rs  output.rs  schema_loader.rs  validator.rs
tests/: cli_integration_test.rs  comprehensive_test_suite.rs  file_discovery_integration_test.rs  http_client_test.rs  integration_tests.rs  lib.rs  libxml2_integration_test.rs  validation_workflow_integration_test.rs  working_comprehensive_tests.rs
tests/benchmarks/: mod.rs  performance_benchmarks.rs
tests/common/: mocks.rs  mod.rs  test_helpers.rs
tests/fixtures/configs/: default.toml  performance.toml
tests/fixtures/schemas/local/: complex.xsd  simple.xsd  strict.xsd
tests/fixtures/xml/: no_schema.xml
tests/fixtures/xml/invalid/: missing_required.xml  simple_invalid.xml  wrong_type.xml
tests/fixtures/xml/malformed/: invalid_encoding.xml  no_root.xml  not_well_formed.xml
tests/fixtures/xml/valid/: complex_valid.xml  remote_schema.xml  simple_valid.xml
tests/integration/: end_to_end_tests.rs  mod.rs  output_integration_tests.rs
tests/unit/: cache_tests.rs  config_tests.rs  error_tests.rs  file_discovery_tests.rs  mod.rs  output_tests.rs  schema_loader_tests.rs  validation_tests.rs
