[package]
name = "validate-xml"
version = "0.1.0"
authors = ["Franklin Chen <franklinchen@franklinchen.com>"]
edition = "2021"

[dependencies]
libc = "*"
ignore = "*"
regex = "*"
lazy_static = "*"
clap = "*"
reqwest = { version = "*", features = ["blocking"] }
dirs = "*"
serde = "*"
docopt = "*"
cached = "*"
