[package]
name = "validate-xml"
version = "0.2.0"
authors = ["Franklin Chen <franklinchen@franklinchen.com>"]
edition = "2024"
license = "MIT"

[[bin]]
name = "validate-xml"
path = "src/main.rs"

[dependencies]
# Core system dependencies
libc = "0.2"

# Async runtime
tokio = { version = "1.48", features = ["full"] }

# Concurrency testing (rayon used only in libxml2 thread-safety tests)
rayon = "1.11"

# Caching (moka for memory, cacache for disk persistence)
moka = { version = "0.12", features = ["future"] }
cacache = { version = "13.1", features = ["tokio", "futures", "tokio-stream"], default-features = false }
futures = "0.3"
tokio-stream = { version = "0.1", features = ["fs"] }

# HTTP client (fully async, remove blocking)
reqwest = { version = "0.12", features = ["json", "stream"] }

# Error handling (replace panics with structured errors)
thiserror = "2.0"
anyhow = "1.0"

# CLI (replace docopt with clap)
clap = { version = "4.5", features = ["derive"] }

# File system traversal
ignore = "0.4"

# Regular expressions
regex = "1.12"

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
toml = "0.9"

# Utilities (removed lazy_static - use once_cell for one-time initialization if needed)
dirs = "6.0"
uuid = { version = "1.18", features = ["v4"] }
chrono = { version = "0.4", features = ["serde"] }
num_cpus = "1.17"
atty = "0.2"

[dev-dependencies]
# Testing dependencies
tokio-test = "0.4"
tempfile = "3.23"
mockall = "0.13"
futures = "0.3"
async-trait = "0.1"
serde_json = "1.0"
